--- a/E-commerce/api/.env.example
+++ b/E-commerce/api/.env.example
@@ -1,4 +1,4 @@
 
-MONGO_URL=mongodb://localhost:27017/henryecomerce
+MONGO_URL=mongodb://localhost:27017/henryecommerce
 PORT=3000
 JWT_SECRET=TOKEN_TOKEN
