--- a/E-commerce/client/package.json
+++ b/E-commerce/client/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.1.0",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.14"
   },
   "devDependencies": {
     "eslint": "8.15.0",
