--- a/E-commerce/client/package.json
+++ b/E-commerce/client/package.json
@@ -9,29 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.0",
-    "@chakra-ui/react": "^2.0.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "axios": "^0.27.2",
-    "framer-motion": "^6.3.3",
     "next": "12.1.6",
-    "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-icons": "^4.3.1",
-    "react-redux": "^8.0.1",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "sweetalert2": "^11.4.14"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
-  },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "next.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
