--- a/E-commerce/client/package.json
+++ b/E-commerce/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
