--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -1,4 +1,4 @@
 
-MONGO_URL=mongodb://localhost:27017/henryecommerce
+MONGO_URL=mongodb+srv://admin:wercox-qEqqy8-gamdis@cluster0.0ykiz.mongodb.net/DatabaseEcommerce?retryWrites=true&w=majority
 PORT=3000
 JWT_SECRET=TOKEN_TOKEN
