--- a/E-commerce/api/package.json
+++ b/E-commerce/api/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "start": "nodemon app.js"
   },
+  "author": "",
+  "license": "ISC",
+  "engines": {
+    "node": ">=12.18.3",
+    "npm": ">=6.14.6"
+  },
   "dependencies": {
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
