--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -1,8 +1,8 @@
 # frontend nextjs
-frontUrl = http://localhost:3001
+frontUrl = http://localhost:3000
            
-MONGO_URL=mongodb://localhost:27017/henryecommerce
-PORT=3000
+MONGO_URL=mongodb+srv://admin:wercox-qEqqy8-gamdis@cluster0.0ykiz.mongodb.net/DatabaseEcommerce
+PORT=3001
 JWT_SECRET=TOKEN_TOKEN
 
 # mongo ATLAS
