fix:(routes api local and deploy)

--- a/E-commerce/client/.env
+++ b/E-commerce/client/.env
@@ -1,6 +1,4 @@
-# API extern
-
-API_URL = https://petelegant.azurewebsites.net/
+BASE_URL=https://petelegant.azurewebsites.net/
 
 GITHUB_ID = 405c465794e05c383ba8
 GITHUB_SECRET = 7ecb083171e51861e9faac34c1a2f0f2e4aadf53
