--- a/E-commerce/client/package.json
+++ b/E-commerce/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "next-redux-wrapper": "^7.0.5",
