--- a/E-commerce/api/package.json
+++ b/E-commerce/api/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "dev": "set NODE_ENV=development && nodemon app.js",
+    "prod": "set NODE_ENV=production && node app.js"
+
   },
   "dependencies": {
     "axios": "^0.27.2",
