--- a/E-commerce/api/production.env
+++ b/E-commerce/api/production.env
@@ -1,9 +1,10 @@
+# NODE_ENV=production
+API_URL=https://petelegant.azurewebsites.net/api
+HOST_CLIENT=https://petelegant.vercel.app
 
-# frontend nextjs
-API_URL=http://localhost:3001/api
-HOST_CLIENT=http://localhost:3000
 MONGO_URL=mongodb+srv://admin:wercox-qEqqy8-gamdis@cluster0.0ykiz.mongodb.net/DatabaseEcommerce
 PORT=3001
+
 JWT_SECRET=TOKEN_TOKEN
 
 # mongo ATLAS
@@ -19,4 +20,3 @@ FACEBOOK_APP_SECRET = b5910a8f8e75b48294c43eb8f49d1648
 
 # express session secret
 SESSION_SECRET = GZJBRnORVYOEyjOHLntB
-
