--- a/E-commerce/client/.env
+++ b/E-commerce/client/.env
@@ -1,4 +1,4 @@
-API_URL=https://petelegant.azurewebsites.net/
+API_URL=https://pet-elegant.herokuapp.com
 
 GITHUB_ID = 405c465794e05c383ba8
 GITHUB_SECRET = 7ecb083171e51861e9faac34c1a2f0f2e4aadf53
