--- a/E-commerce/api/package.json
+++ b/E-commerce/api/package.json
@@ -1,16 +1,15 @@
 {
-
-    "name": "api",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-    "start": "nodemon app.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-
+  "name": "api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
     "axios": "^0.27.2",
     "bcrypt-nodejs": "^0.0.3",
     "bcryptjs": "^2.4.3",
@@ -31,5 +30,5 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
-    }
-}  
+  }
+}
