feat:(banner, fontfamily, fix  index responsive)

--- a/E-commerce/client/package.json
+++ b/E-commerce/client/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/apfel-grotezk": "^4.5.2",
+    "@fontsource/montserrat": "^4.5.10",
+    "@fontsource/nunito": "^4.5.9",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "js-cookie": "^3.0.1",
