--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -18,3 +18,8 @@ FACEBOOK_APP_SECRET = b5910a8f8e75b48294c43eb8f49d1648
 
 # express session secret
 SESSION_SECRET = GZJBRnORVYOEyjOHLntB
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_USER=
