--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -1,10 +1,10 @@
 
 # frontend nextjs
-API_URL=https://petelegant.azurewebsites.net/api
-HOST_CLIENT=https://petelegant.vercel.app
+API_URL=http://localhost:3001/api
+HOST_CLIENT=http://localhost:3000
 MONGO_URL=mongodb+srv://admin:wercox-qEqqy8-gamdis@cluster0.0ykiz.mongodb.net/DatabaseEcommerce
 PORT=3001
-JWT_SECRET=TOKEN_TOKEN
+JWT_ACCESS_TOKEN_SECRET=GZJBRnORVYOEyjOHLntB
 
 # mongo ATLAS
 uri = mongodb+srv://admin:wercox-qEqqy8-gamdis@cluster0.0ykiz.mongodb.net/DatabaseEcommerce
