--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -1,10 +1,6 @@
 
 # frontend nextjs
-<<<<<<< HEAD
 API_URL=http://localhost:3001/api
-=======
-API_URL=https://petelegant.azurewebsites.net/api
->>>>>>> 78e023bd7b59e9aba338fd4fdff583ad046cf60a
 HOST_CLIENT=http://localhost:3000
 MONGO_URL=mongodb+srv://admin:wercox-qEqqy8-gamdis@cluster0.0ykiz.mongodb.net/DatabaseEcommerce
 PORT=3001
@@ -21,6 +17,9 @@ GOOGLE_CLIENT_SECRET = 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
 FACEBOOK_APP_ID = 1410433986094646
 FACEBOOK_APP_SECRET = b5910a8f8e75b48294c43eb8f49d1648
 
+# Mercado pago credentials
+PUBLIC_KEY_MP = TEST-8f8f8f8f-8f8f-8f8f-8f8f-8f8f8f8f8f8f
+ACCESS_TOKEN_MP = TEST-2613373101015113-060700-dc9272adb9afb27eb269b1802800c7ac-391367749
 # express session secret
 SESSION_SECRET = GZJBRnORVYOEyjOHLntB
 
