--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -1,9 +1,9 @@
 
 # frontend nextjs
 
-API_URL=http://localhost:3001/api
+API_URL=https://pet-elegant.herokuapp.com/api
 
-HOST_CLIENT=http://localhost:3000
+HOST_CLIENT=https://petelegant.vercel.app
 MONGO_URL=mongodb+srv://admin:wercox-qEqqy8-gamdis@cluster0.0ykiz.mongodb.net/DatabaseEcommerce
 PORT=3001
 JWT_ACCESS_TOKEN_SECRET=GZJBRnORVYOEyjOHLntB
@@ -26,3 +26,10 @@ EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_USER=
 EMAIL_USER=
+
+#config server gmail- mailer
+HOST= "smtp.gmail.com"
+PORTGMAIL= 465
+USER= "pet.elegant.ecommerce.henry@gmail.com"
+
+PASS= "vtyzgfozwwfcxnrd"
