--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -28,8 +28,8 @@ EMAIL_USER=
 EMAIL_USER=
 
 #config server gmail- mailer
-HOST= "smtp.gmail.com"
+HOST= smtp.gmail.com
 PORTGMAIL= 465
-USER= "pet.elegant.ecommerce.henry@gmail.com"
+USER= pet.elegant.ecommerce.henry@gmail.com
 
-PASS= "vtyzgfozwwfcxnrd"
+PASS= vtyzgfozwwfcxnrd
