fix(configuracion de nodemailer)

--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -22,7 +22,9 @@ FACEBOOK_APP_SECRET = b5910a8f8e75b48294c43eb8f49d1648
 # express session secret
 SESSION_SECRET = GZJBRnORVYOEyjOHLntB
 
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_USER=
+# nodemailer config
+HOST= smtp.gmail.com
+PORTGMAIL= 465
+USER= pet.elegant.ecommerce.henry@gmail.com
+
+PASS= eedhmlxnkxutcqtt
