fix:configuraion nodemailer

--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -24,7 +24,7 @@ SESSION_SECRET = GZJBRnORVYOEyjOHLntB
 EMAIL_HOST= smtp.gmail.com
 EMAIL_PORT= 465
 EMAIL_USER= pet.elegant.ecommerce.henry@gmail.com
-EMAIL_USER= eedhmlxnkxutcqtt
+EMAIL_PASS= eedhmlxnkxutcqtt
 
 #config server gmail- mailer
 HOST= "smtp.gmail.com"
