--- a/E-commerce/client/package.json
+++ b/E-commerce/client/package.json
@@ -17,6 +17,7 @@
     "@fontsource/montserrat": "^4.5.10",
     "@fontsource/nunito": "^4.5.9",
     "axios": "^0.27.2",
+    "chakra-ui-simple-autocomplete": "^1.0.0",
     "framer-motion": "^6.3.3",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
