--- a/E-commerce/api/package.json
+++ b/E-commerce/api/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.13",
     "mongoose": "^6.3.3",
     "mongoose-autopopulate": "^0.16.1",
     "morgan": "^1.10.0",
