--- a/E-commerce/client/.env
+++ b/E-commerce/client/.env
@@ -1,10 +1,6 @@
-API_URL=https://pet-elegant.herokuapp.com
-HOST_CLIENT= https://petelegant.vercel.app
 
-GITHUB_ID = 405c465794e05c383ba8
-GITHUB_SECRET = 7ecb083171e51861e9faac34c1a2f0f2e4aadf53
+# frontend nextjs
 
-GOOGLE_ID = 149864965763-4gjhsnp4g0qk1oj9mrdq41s5mmdev7qn.apps.googleusercontent.com
-GOOGLE_SECRET = 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
+API_URL= http://localhost:3001/api
 
-#prueba
+HOST_CLIENT=http://localhost:3000
