--- a/E-commerce/client/.env
+++ b/E-commerce/client/.env
@@ -1,5 +1,5 @@
-API_URL=http://localhost:3001
-HOST_CLIENT= http://localhost:3000
+API_URL= https://pet-elegant.herokuapp.com/api
+HOST_CLIENT=https://petelegant.vercel.app
 
 GITHUB_ID = 405c465794e05c383ba8
 GITHUB_SECRET = 7ecb083171e51861e9faac34c1a2f0f2e4aadf53
