--- a/E-commerce/client/.env
+++ b/E-commerce/client/.env
@@ -1,6 +1,3 @@
-
 # frontend nextjs
-
-API_URL= http://localhost:3001/api
-
-HOST_CLIENT=http://localhost:3000
+API_URL= https://pet-elegant.herokuapp.com/api
+HOST_CLIENT=https://petelegant.vercel.app
