--- a/E-commerce/client/.env
+++ b/E-commerce/client/.env
@@ -1,2 +1,3 @@
-API_URL= https://pet-elegant.herokuapp.com
-HOST_CLIENT=https://petelegant.vercel.app
+API_URL= http://localhost:3001
+
+HOST_CLIENT=http://localhost:3000
