antes del pull 14-06-2022 16:12

--- a/E-commerce/api/.env
+++ b/E-commerce/api/.env
@@ -37,5 +37,5 @@ HOST= smtp.gmail.com
 PORTGMAIL= 465
 USER= pet.elegant.ecommerce.henry@gmail.com
 
-PASS= "vtyzgfozwwfcxnrd"
+PASS= vtyzgfozwwfcxnrd
 #prueba
