--- a/E-commerce/client/package.json
+++ b/E-commerce/client/package.json
@@ -17,12 +17,14 @@
     "@fontsource/montserrat": "^4.5.10",
     "@fontsource/nunito": "^4.5.9",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "framer-motion": "^6.3.3",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
